# bsdata-importer

./: .gitignore  README.md  bsdata_importer.py  import_config.json  pyproject.toml
docs/superpowers/specs/: 2026-07-09-bases-factions-design.md
tests/: test_fetch_repo_dir.py  test_parse_rich.py  test_parse_rich_json.py
